--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,10 @@ header {
     background-color: #eeeeee;
 }
 
+.support-cell.status-na {
+    background-color: #eeeeee;
+}
+
 .support-cell.status-supported.selected {
     background-color: white;
     color: #4caf50;
@@ -144,6 +148,10 @@ header {
 }
 
 .support-cell.status-unknown.selected {
+    background-color: white;
+}
+
+.support-cell.status-na.selected {
     background-color: white;
 }
 
